--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
+    "lucide-react": "^0.510.0",
+    "next": "14.2.25",
+    "next-auth": "^4.24.11",
     "react": "^18",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18",
-    "next": "14.2.25"
+    "sharp": "^0.34.2",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.25"
+    "eslint-config-next": "14.2.25",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
