--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ NEXTAUTH_JWT_SECRET=kickmyass@2025
 NEXTAUTH_URL=http://localhost:3000
 URL_SINDOFERRY=http://172.24.18.184:7201/sindoferry
 URL_GATEWAY=http://localhost:5000
-URL_DEEP_LINK=https://devmobunilink.1-saku.com/securepagepayment?
+NEXT_PUBLIC_URL_DEEP_LINK=https://devmobunilink.1-saku.com/securepagepayment
